# async-on-embedded

./: Cargo.toml
async-embedded/: Cargo.toml
async-embedded/src/: lib.rs  unsync.rs
async-embedded/src/unsync/: channel.rs  mutex.rs  slab.rs  waker_set.rs
nrf52/: Cargo.toml
panic-udf/: Cargo.toml
