[package]
authors = ["Jorge Aparicio <jorge.aparicio@ferrous-systems.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "nrf52"
publish = false
version = "0.0.0-alpha.0"

[dev-dependencies]
cortex-m-semihosting = "0.3.5"
heapless = "0.5.5"
panic-semihosting = "0.5.3"
panic-udf = { path = "../panic-udf" }

[dependencies]
async-embedded = { path = "../async-embedded" }
cortex-m = { git = "https://github.com/rust-embedded/cortex-m" }
cortex-m-rt = "0.6.12"
pac = { package = "nrf52840-pac", version = "0.9.0", features = ["rt"] }

[dependencies.chrono]
default-features = false
version = "0.4.10"
